--- a/src/pages/FUNCTIONREFS.astro
+++ b/src/pages/FUNCTIONREFS.astro
@@ -1,4 +1,4 @@
-function gotoTop() {
+<!-- function gotoTop() {
     var scrollToTop = window.setInterval(function() {
     var pos = window.pageYOffset;
     if ( pos > 0 ) {
@@ -17,7 +17,7 @@ function gotoTop() {
     16 (2500 words)
     10 (3500 words)
 */
-}
+} -->
 <script>
   location.href = '/404'
 </script>
