--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,8 +58,7 @@
         </sidebar>
       </div>
     </main>
-    <script src="/main.js"></script>
-    <script src="/blog.js"></script>
+    <script src="/main.js" is:inline></script>
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
       var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
