--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,78 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About | RockGamerAK</title>
-    <base href="https://RockGamerAK.com" />
-    <link rel="stylesheet" href="main.css">
-    <link rel="icon" href="RockGamerAK-Favicon.png">
-    <link href="/root.css" rel="stylesheet" />
-    <link href="/fire.css" rel="stylesheet" type="text/css"/>
-    <link href="https://firecss.hecker40.repl.co/fire.css" rel="stylesheet" type="text/css"/>
-    <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=625cc7f8cb9e7d001955b4a3&product=sop' async='async'></script>
-  </head>
-  <body>
-    <header id="header">
-      <a class="logo-link" href="/">
-        <img class="logo" src="/RockGamerAK.png">
-      </a>
-      <nav>
-        <ul class="nav-links">
-          <a href="/">
-            <li class="navigation-button">Home</li>
-          </a>
-          <a href="/about">
-            <li class="navigation-button">About</li>
-          </a>
-          <a href="/contact">
-            <li class="navigation-button">Contact</li>
-          </a>
-          <a href="/projects">
-            <li class="navigation-button">Projects</li>
-          </a>
-          <a href="https://Blog.RockGamerAK.com" target="_blank">
-            <li class="navigation-button">Blog</li>
-          </a>
-          <a href="/sites">
-            <li class="navigation-button">Sites</li>
-          </a>
-          <a href="/videos">
-            <li class="navigation-button">Videos</li>
-          </a>
-        </ul>
-      </nav>
-    </header>
-    <h1 id="page-title">About</h1>
-    <!-- ShareThis BEGIN --><div class="sharethis-inline-follow-buttons"></div><!-- ShareThis END -->
-    <main id="content">
-      <div id="main-content" align="center">
-        <sidebar>
-          <iframe frameborder="0" src="leftSidebar.html"></iframe>
-        </sidebar>
-        <content>
-          Hello, my name is RockGamerAK. I'm <span id="age" onload="let db = Number(atob('MjAwNw==')); let date = new Date(); let year = date.getFullYear(); let mont = date.getMonth(); let ans = ''; if (mont === 3 && date.getDate() >= 28) {ans = year - db} else if (mont < 3) {ans = year - db - 1} else {ans = year - db}; document.getElementById('age').innerHTML = ans">16</span> years old, and a High School Student. <br>
-          I am good with software, so if you need tech help, DM @w.web.wizards or email <a href="mailto:ww@RockGamerAK.com">ww@RockGamerAK.com</a>. I also enjoy history and geography.
-        </content>
-        <sidebar>
-          <iframe frameborder="0" src="rightSidebar.html"></iframe>
-        </sidebar>
-      </div>
-    </main>
-    <script src="/main.js" is:inline></script>
-    <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
-      var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-      (function(){
-        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-        s1.async=true;
-        s1.src='https://embed.tawk.to/613695e4d6e7610a49b3f5bc/1feujj12b';
-        s1.charset='UTF-8';
-        s1.setAttribute('crossorigin','*');
-        s0.parentNode.insertBefore(s1,s0);
-      })();
-    </script>
-    <!--End of Tawk.to Script-->
-  </body>
-</html>
+---
+import Layout from '../layouts/Layout.astro'
+---
+<Layou title="About">
+  Hello, my name is RockGamerAK. I'm <span id="age" onload="let db = Number(atob('MjAwNw==')); let date = new Date(); let year = date.getFullYear(); let mont = date.getMonth(); let ans = ''; if (mont === 3 && date.getDate() >= 28) {ans = year - db} else if (mont < 3) {ans = year - db - 1} else {ans = year - db}; document.getElementById('age').innerHTML = ans">16</span> years old, and a High School Student. <br>
+  I am good with software, so if you need tech help, DM @w.web.wizards or email <a href="mailto:ww@RockGamerAK.com">ww@RockGamerAK.com</a>. I also enjoy history and geography.
+</Layout>
