--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro'
 ---
-<Layout>
+<Layout title="">
   <iframe frameborder="0" src="http://Blog.RockGamerAK.com" style="background: white;"></iframe>
 </Layout>
