--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,138 +1,68 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects | RockGamerAK</title>
-    <link rel="stylesheet" href="main.css">
-    <link rel="icon" href="RockGamerAK-Favicon.png">
-    <link href="/root.css" rel="stylesheet" />
-    <link href="/fire.css" rel="stylesheet" type="text/css"/>
-    <link href="https://firecss.hecker40.repl.co/fire.css" rel="stylesheet" type="text/css"/>
-    <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=625cc7f8cb9e7d001955b4a3&product=sop' async='async'></script>
-  </head>
-  <body>
-    <header id="header">
-      <a class="logo-link" href="/" target="_parent">
-        <img class="logo" src="/RockGamerAK.png">
-      </a>
-      <nav>
-        <ul class="nav-links">
-          <a href="/">
-            <li class="navigation-button">Home</div>
-          </a>
-          <a href="/about">
-            <li class="navigation-button">About</div>
-          </a>
-          <a href="/contact">
-            <li class="navigation-button">Contact</div>
-          </a>
-          <a href="/projects">
-            <li class="navigation-button">Projects</div>
-          </a>
-          <a href="https://Blog.RockGamerAK.com" target="_blank">
-            <li class="navigation-button">Blog</div>
-          </a>
-          <a href="/sites">
-            <li class="navigation-button">Sites</div>
-          </a>
-          <a href="/videos">
-            <li class="navigation-button">Videos</div>
-          </a>
-        </ul>
-      </nav>
-    </header>
-    <h1 id="page-title">My Projects</h1>
-    <!-- ShareThis BEGIN --><div class="sharethis-inline-follow-buttons"></div><!-- ShareThis END -->
-    <main id="content" align="center" projects>
-      <div id="main-content">
-        <sidebar>
-          <iframe frameborder="0" src="leftSidebar.html"></iframe>
-        </sidebar>
-        <content>
-          <hr width="750">
-          <h3>Misc Projects</h3>
-          <hr width="550">
-          <section role="list">
-            <div role="listitem">
-              <a href="https://Timer.RockGamerAK.repl.co">My Timer Application</a><b>: </b>
-              <span class="project-description">Punch in an hour minute and second value and see the timer whizz into action.</span>
-            </div>
-            <div role="listitem">
-              <a href="https://Live-Clock.RockGamerAK.com">My Clock Application</a><b>: </b>
-              <span class="project-description">This clock application harnesses the datetime features of JavaScript to display your local time no matter where you are.</span>
-            </div>
-            <div role="listitem">
-              <a href="https://Nearpod.RockGamerAK.com">My Nearpod Joiner</a><b>: </b>
-              <span class="project-description">Input in a code and it will join the presentation for you!</span>
-            </div>
-            <div role="listitem">
-              <a href="https://Favicons.RockGamerAK.com">My Favicon Generator</a><b>: </b>
-              <span class="project-description">Input in a URL and it will generate the favicon of that URL!</span>
-            </div>
-            <!-- <div role="listitem">
-              <a href="https://Image-Changer.RockGamerAK.com">My Image Changer</a><b>: </b>
-              <span class="project-description">A Random Image Changer!</span>
-            </div> -->
-            <!-- <div role="listitem">
-              <a href="https://Pop-Ups.RockGamerAK.com">My Pop-Ups Machene</a><b>: </b>
-              <span class="project-description">My Version Of YouAreAnIdiot!</span>
-            </div> -->
-            <div role="listitem">
-              <a href="https://Disability-Menus.RockGamerAK.com">My Disability Menus</a><b>: </b>
-              <span class="project-description">An Oculus Environment That Is Suited For Disabled People!</span>
-            </div>
-            <div role="listitem">
-              <a href="https://Browser.RockGamerAK.com">My Browser</a><b>: </b>
-              <span class="project-description">A Hard-Coded "Browser" That Works!</span>
-            </div>
-          </section>
-          <hr width="750">
-          <h3>Games</h3>
-          <hr width="550">
-          <section role="list">
-            <div role="listitem">
-              <a href="https://uno.RockGamerAK.repl.co">My UNO Game</a><b>: </b>
-              <span class="project-description">Play UNO Online!</span>
-            </div>
-            <div role="listitem">
-              <a href="https://Tic-Tac-Toe.RockGamerAK.com">My Tic-Tac-Toe Game</a><b>: </b>
-              <span class="project-description">Play Tic-Tac-Toe Online!</span>
-            </div>
-            <div role="listitem">
-              <a href="https://Magic-8-Ball.RockGamerAK.com">My Magic-8-Ball Game</a><b>: </b>
-              <span class="project-description">Play Tic-Tac-Toe Online!</span>
-            </div>
-            <div role="listitem">
-              <a href="https://Rock-Paper-Scissors.RockGamerAK.com">My Rock-Paper-Scissors Game</a><b>: </b>
-              <span class="project-description">Play Rock-Paper-Scissors Online!</span>
-            </div>
-            <div role="listitem">
-              <a href="https://Cookie-Clicker.RockGamerAK.com">My Cookie Clicker Game</a><b>: </b>
-              <span class="project-description">Play Cookie Clicker Online!</span>
-            </div>
-          </section>
-          <hr width="750">
-        </content>
-        <sidebar>
-          <iframe frameborder="0" src="rightSidebar.html"></iframe>
-        </sidebar>
-      </div>
-    </main>
-    <scrip src="/main.js" is:inline></script>
-    <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
-      var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-      (function(){
-        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-        s1.async=true;
-        s1.src='https://embed.tawk.to/613695e4d6e7610a49b3f5bc/1feujj12b';
-        s1.charset='UTF-8';
-        s1.setAttribute('crossorigin','*');
-        s0.parentNode.insertBefore(s1,s0);
-      })();
-    </script>
-    <!--End of Tawk.to Script-->
-  </body>
-</html>
+---
+import Layout from '../layouts/Layout.astro'
+---
+<Layout title="Projects">
+  <hr width="750">
+  <h3>Misc Projects</h3>
+  <hr width="550">
+  <section>
+    <div>
+      <a href="https://Timer.RockGamerAK.repl.co">My Timer Application</a><b>: </b>
+      <span class="project-description">Punch in an hour minute and second value and see the timer whizz into action.</span>
+    </div>
+    <div>
+      <a href="https://Live-Clock.RockGamerAK.com">My Clock Application</a><b>: </b>
+      <span class="project-description">This clock application harnesses the datetime features of JavaScript to display your local time no matter where you are.</span>
+    </div>
+    <div>
+      <a href="https://Nearpod.RockGamerAK.com">My Nearpod Joiner</a><b>: </b>
+      <span class="project-description">Input in a code and it will join the presentation for you!</span>
+    </div>
+    <div>
+      <a href="https://Favicons.RockGamerAK.com">My Favicon Generator</a><b>: </b>
+      <span class="project-description">Input in a URL and it will generate the favicon of that URL!</span>
+    </div>
+    <!-- <div>
+      <a href="https://Image-Changer.RockGamerAK.com">My Image Changer</a><b>: </b>
+      <span class="project-description">A Random Image Changer!</span>
+    </div> -->
+    <!-- <div>
+      <a href="https://Pop-Ups.RockGamerAK.com">My Pop-Ups Machene</a><b>: </b>
+      <span class="project-description">My Version Of YouAreAnIdiot!</span>
+    </div> -->
+    <div>
+      <a href="https://Disability-Menus.RockGamerAK.com">My Disability Menus</a><b>: </b>
+      <span class="project-description">An Oculus Environment That Is Suited For Disabled People!</span>
+    </div>
+    <div>
+      <a href="https://Browser.RockGamerAK.com">My Browser</a><b>: </b>
+      <span class="project-description">A Hard-Coded "Browser" That Works!</span>
+    </div>
+  </section>
+  <hr width="750">
+  <h3>Games</h3>
+  <hr width="550">
+  <section>
+    <div>
+      <a href="https://uno.RockGamerAK.repl.co">My UNO Game</a><b>: </b>
+      <span class="project-description">Play UNO Online!</span>
+    </div>
+    <div>
+      <a href="https://Tic-Tac-Toe.RockGamerAK.com">My Tic-Tac-Toe Game</a><b>: </b>
+      <span class="project-description">Play Tic-Tac-Toe Online!</span>
+    </div>
+    <div>
+      <a href="https://Magic-8-Ball.RockGamerAK.com">My Magic-8-Ball Game</a><b>: </b>
+      <span class="project-description">Play Tic-Tac-Toe Online!</span>
+    </div>
+    <div>
+      <a href="https://Rock-Paper-Scissors.RockGamerAK.com">My Rock-Paper-Scissors Game</a><b>: </b>
+      <span class="project-description">Play Rock-Paper-Scissors Online!</span>
+    </div>
+    <div>
+      <a href="https://Cookie-Clicker.RockGamerAK.com">My Cookie Clicker Game</a><b>: </b>
+      <span class="project-description">Play Cookie Clicker Online!</span>
+    </div>
+  </section>
+  <hr width="750">
+</Layout>
