--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,92 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 | RockGamerAK</title>
-    <base href="https://RockGamerAK.com" />
-    <link rel="stylesheet" href="/main.css">
-    <link rel="icon" href="/RockGamerAK-Favicon.png">
-    <link href="/root.css" rel="stylesheet" />
-    <link href="/fire.css" rel="stylesheet" type="text/css"/>
-    <link href="https://firecss.hecker40.repl.co/fire.css" rel="stylesheet" type="text/css"/>
-    <script>
-      var path = location.pathname
-      if (path.endsWith('/')) {
-        path = path.substring(0, path.split('').length-1)
-      }
-      else if (path === '__repo') {
-        location.href = 'https://github.com/RockGamerAK/RockGamerAK.com'
-      }
-      else if (path === '__dev') {
-        location.href = 'https://github.dev/RockGamerAK/RockGamerAK.com'
-      }
-    </script>
-    <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=625cc7f8cb9e7d001955b4a3&product=sop' async='async'></script>
-  </head>
-  <body>
-    <header id="header">
-      <a class="logo-link" href="/">
-        <img class="logo" src="/RockGamerAK.png">
-      </a>
-      <nav>
-        <ul class="nav-links">
-          <a href="/">
-            <li class="navigation-button">Home</li>
-          </a>
-          <a href="/about">
-            <li class="navigation-button">About</li>
-          </a>
-          <a href="/contact">
-            <li class="navigation-button">Contact</li>
-          </a>
-          <a href="/projects">
-            <li class="navigation-button">Projects</li>
-          </a>
-          <a href="https://Blog.RockGamerAK.com" target="_blank">
-            <li class="navigation-button">Blog</li>
-          </a>
-          <a href="/sites">
-            <li class="navigation-button">Sites</li>
-          </a>
-          <a href="/videos">
-            <li class="navigation-button">Videos</li>
-          </a>
-        </ul>
-      </nav>
-    </header>
-    <h1 id="page-title">Not Found</h1>
-    <!-- ShareThis BEGIN --><div class="sharethis-inline-follow-buttons"></div><!-- ShareThis END -->
-    <main id="content" align="center">
-      <div id="main-content">
-        <sidebar>
-          <iframe frameborder="0" src="leftSidebar.html"></iframe>
-        </sidebar>
-        <content>
-          <font class="current-URL-not-found"></font>
-        	<p></p>
-          Error Type: 404
-        </content>
-        <sidebar>
-          <iframe frameborder="0" src="rightSidebar.html"></iframe>
-        </sidebar>
-      </div>
-    </main>
-    <script src="/404.js" is:inline></script>
-    <script src="/main.js" is:inline></script>
-    <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
-      var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-      (function(){
-        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-        s1.async=true;
-        s1.src='https://embed.tawk.to/613695e4d6e7610a49b3f5bc/1feujj12b';
-        s1.charset='UTF-8';
-        s1.setAttribute('crossorigin','*');
-        s0.parentNode.insertBefore(s1,s0);
-      })();
-    </script>
-    <!--End of Tawk.to Script-->
-  </body>
-</html>
+---
+import Layout from '../layouts/Layout.astro'
+---
+<Layout title="404" pTitle="Not Found">
+  <font class="current-URL-not-found"></font>
+  <p></p>
+  Error Type: 404
+  <script src="/404.js" is:inline></script>
+</Layout>
