--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,5 +2,5 @@
 import Layout from '../layouts/Layout.astro'
 ---
 <Layout title="">
-  <iframe frameborder="0" src="http://Blog.RockGamerAK.com" style="background: white;"></iframe>
+  <iframe frameborder="0" src="https://Blog.RockGamerAK.com" style="background: white;"></iframe>
 </Layout>
