--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,6 +2,17 @@
 import Layout from '../layouts/Layout.astro'
 ---
 <Layout title="About">
-  Hello, my name is RockGamerAK. I'm&nbsp;<span id="age" onload="let db = Number(atob('MjAwNw==')); let date = new Date(); let year = date.getFullYear(); let mont = date.getMonth(); let ans = ''; if (mont === 3 && date.getDate() >= 28) {ans = year - db} else if (mont < 3) {ans = year - db - 1} else {ans = year - db}; document.getElementById('age').innerHTML = ans">16</span> years old, and a High School Student. <br>
+  Hello, my name is RockGamerAK. I'm&nbsp;<span id="age"></span> years old, and a High School Student. <br>
   I am good with software, so if you need tech help, DM @w.web.wizards or email <a href="mailto:ww@RockGamerAK.com">ww@RockGamerAK.com</a>. I also enjoy history and geography.
+  <script>
+    let db = 2007
+    let date = new Date()
+    let year = date.getFullYear()
+    let mont = date.getMonth()
+    let ans = ''
+    if (mont === 3 && date.getDate() >= 28) ans = year - db
+    else if (mont < 3) ans = year - db - 1
+    else ans = year - db
+    document.getElementById('age').innerHTML = ans
+  </script>
 </Layout>
