--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,9 +2,11 @@
 import Layout from '../layouts/Layout.astro'
 ---
 <Layout title="About">
-  Hello, my name is RockGamerAK. I'm&nbsp;<span id="age"></span> years old, and a High School Student. <br>
-  I am good with software, so if you need tech help, DM @w.web.wizards or email <a href="mailto:ww@RockGamerAK.com">ww@RockGamerAK.com</a>. I also enjoy history and geography.
-  <script>
+  <div>
+    Hello, my name is RockGamerAK. I'm&nbsp;<span id="age"></span> years old, and a High School Student. <br>
+    I am good with software, so if you need tech help, DM @w.web.wizards or email <a href="mailto:ww@RockGamerAK.com">ww@RockGamerAK.com</a>. I also enjoy history and geography.
+  </div>
+<script>
     let db = 2007
     let date = new Date()
     let year = date.getFullYear()
