--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro'
 ---
 <Layout title="About">
   <div style="margin-inline: auto;">
-    Hello, my name is RockGamerAK. I'm&nbsp;<span id="age"></span> years old, and a High School Student. <br>
+    Hello, my name is Adarsh Kumar or RockGamerAK. I'm&nbsp;<span id="age"></span> years old, and a High School Student. <br>
     I am good with software, so if you need tech help, DM @w.web.wizards or email <a href="mailto:ww@RockGamerAK.com">ww@RockGamerAK.com</a>. I also enjoy history and geography.
   </div>
 <script>
