upload and use Logo.ong

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,7 +33,7 @@ if (!!classItems === false) classItems = ''
   <body>
     <header id="header">
       <a class="logo-link" href="/">
-        <img class="logo" src="/RockGamerAK.png">
+        <img class="logo" src="/Logo.png">
       </a>
       <nav>
         <ul class="nav-links">
