--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,30 +35,14 @@ if (!!classItems === false) classItems = ''
       <a class="logo-link" href="/">
         <img class="logo" src="/Logo.png">
       </a>
-      <nav>
-        <ul class="nav-links">
-          <a href="/">
-            <li class="navigation-button">Home</li>
-          </a>
-          <a href="/about">
-            <li class="navigation-button">About</li>
-          </a>
-          <a href="/contact">
-            <li class="navigation-button">Contact</li>
-          </a>
-          <a href="/projects">
-            <li class="navigation-button">Projects</li>
-          </a>
-          <a href="https://Blog.RockGamerAK.com" target="_blank">
-            <li class="navigation-button">Blog</li>
-          </a>
-          <a href="/sites">
-            <li class="navigation-button">Sites</li>
-          </a>
-          <a href="/videos">
-            <li class="navigation-button">Videos</li>
-          </a>
-        </ul>
+      <nav class="nav-links">
+				<a class="navigation-button" href="/">Home</a>
+				<a class="navigation-button" href="/about">About</a>
+				<a class="navigation-button" href="/contact">Contact</a>
+				<a class="navigation-button" href="/projects">Projects</a>
+				<a class="navigation-button" href="https://Blog.RockGamerAK.com" target="_blank">Blog</a>
+				<a class="navigation-button" href="/sites">Sites</a>
+				<a class="navigation-button" href="/videos">Videos</a>
       </nav>
     </header>
     <h1 id="page-title">{pTitle}</h1>
