--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,7 +35,7 @@ if (!!classItems === false) classItems = ''
       <a class="logo-link" href="/">
         <img class="logo" src="/Logo.png">
       </a>
-      <nav class="nav-links">
+      <nav class="nav">
 				<a class="navigation-button" href="/">Home</a>
 				<a class="navigation-button" href="/about">About</a>
 				<a class="navigation-button" href="/contact">Contact</a>
