--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,13 +36,13 @@ if (!!classItems === false) classItems = ''
         <img class="logo" src="/Logo.png">
       </a>
       <nav class="nav">
-				<a class="navigation-button" href="/">Home</a>
-				<a class="navigation-button" href="/about">About</a>
-				<a class="navigation-button" href="/contact">Contact</a>
-				<a class="navigation-button" href="/projects">Projects</a>
-				<a class="navigation-button" href="https://Blog.RockGamerAK.com" target="_blank">Blog</a>
-				<a class="navigation-button" href="/sites">Sites</a>
-				<a class="navigation-button" href="/videos">Videos</a>
+				<a href="/">Home</a>
+				<a href="/about">About</a>
+				<a href="/contact">Contact</a>
+				<a href="/projects">Projects</a>
+				<a href="https://Blog.RockGamerAK.com" target="_blank">Blog</a>
+				<a href="/sites">Sites</a>
+				<a href="/videos">Videos</a>
       </nav>
     </header>
     <h1 id="page-title">{pTitle}</h1>
