--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,11 +1,13 @@
 ---
+import '../styles/list.scss'
+
 import Layout from '../layouts/Layout.astro'
 ---
 <Layout title="Projects">
   <hr width="750">
   <h3>Misc Projects</h3>
   <hr width="550">
-  <section>
+  <section class="list v">
     <div>
       <a href="https://Timer.RockGamerAK.repl.co">My Timer Application</a><b>: </b>
       <span class="project-description">Punch in an hour minute and second value and see the timer whizz into action.</span>
@@ -42,7 +44,7 @@ import Layout from '../layouts/Layout.astro'
   <hr width="750">
   <h3>Games</h3>
   <hr width="550">
-  <section>
+  <section class="list v">
     <div>
       <a href="https://uno.RockGamerAK.repl.co">My UNO Game</a><b>: </b>
       <span class="project-description">Play UNO Online!</span>
