--- a/src/pages/sites.astro
+++ b/src/pages/sites.astro
@@ -1,8 +1,10 @@
 ---
+import '../styles/list.scss'
+
 import Layout from '../layouts/Layout.astro'
 ---
 <Layout title="Sites">
-  <section>
+  <section class="list v">
     <div>
       <a href="https://ww.RockGamerAK.com">My Business</a><b>: </b>
       <span class="project-description">Web Wizards is a suite of Online Tools to help boost your productivity.</span>
