move main.css to scss

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,8 @@
 ---
+import '../styles/globals.scss'
+
+import Header from '../components/header.astro'
+
 var sName = 'RockGamerAK / Adarsh Kumar'
 
 var { title, pTitle, classItems } = Astro.props;
@@ -31,20 +35,7 @@ if (!!classItems === false) classItems = ''
     <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=625cc7f8cb9e7d001955b4a3&product=sop' async='async'></script>
   </head>
   <body>
-    <header id="header">
-      <a class="logo-link" href="/">
-        <img class="logo" src="/Logo.png">
-      </a>
-      <nav class="nav">
-				<a href="/">Home</a>
-				<a href="/about">About</a>
-				<a href="/contact">Contact</a>
-				<a href="/projects">Projects</a>
-				<a href="https://Blog.RockGamerAK.com" target="_blank">Blog</a>
-				<a href="/sites">Sites</a>
-				<a href="/videos">Videos</a>
-      </nav>
-    </header>
+    <Header />
     <h1 id="page-title">{pTitle}</h1>
     <main id="content" align="center">
       <div id="main-content" class={classItems}>
