--- a/src/pages/soon.astro
+++ b/src/pages/soon.astro
@@ -1,4 +1,6 @@
 ---
+import '../styles/pages/soon.scss'
+
 import Layout from '../layouts/Layout.astro'
 ---
 <Layout title="Soon" classItems="isSoon">
