--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,3 +1,6 @@
+---
+import '../styles/components/header.scss'
+---
 <header id="header">
     <a class="logo-link" href="/">
         <img class="logo" src="/Logo.png">
