--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,8 +27,7 @@ if (!!classItems === false) classItems = ''
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{title}</title>
     <base href="https://RockGamerAK.com" />
-    <link rel="stylesheet" href="/main.css">
-    <link rel="icon" href="RockGamerAK-Favicon.png">
+    <link rel="icon" href="/RockGamerAK-Favicon.png">
     <link href="/root.css" rel="stylesheet" />
     <link href="/fire.css" rel="stylesheet" type="text/css"/>
     <link href="https://firecss.hecker40.repl.co/fire.css" rel="stylesheet" type="text/css"/>
