--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
     font-family: 'Montserrat', sans-serif;
@@ -15,6 +16,7 @@
     --navigation-button: hsl(209, 56%, 53%);
     --navigaton-button-hover: hsl(29, 56%, 53%);
     --current-page: hsl(200, 90%, 50%);
+    color: white;
 }
 
 html, body, iframe {
