--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -38,42 +38,20 @@ header {
     gap: 15px;
   }
   
-  .nav a {
-    padding: 10px 20px;
+  .nav button {
+    // padding: 10px 20px;
   
-    color: var(--navigation-link);
-    background-color: var(--navigation-button);
-  
-    border: none;
     border-radius: 25px;
   
     font-size: 1.5rem;
     font-weight: 500;
-    text-decoration: none;
+    }
   
-    display: grid;
-    place-items: center;
-  
-    transition: color 0.3s ease all 250ms;
-    transition-timing-function: ease-in-out;
-  }
-  
-  .nav a:is(:hover, :focus) {
-    margin: 0;
-  
-    background-color: var(--navigaton-button-hover);
-  
-    color: var(--navigation-link-hover);
-  
+  .nav button:is(:hover, :focus) {
     border-radius: 100px;
   }
   
-  .nav #active-link {
-    color: var(--active-link);
-  }
-  
   .nav .current-page {
-    background-color: var(--current-page);
   }
   
   
