--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -14,7 +14,7 @@
     color: white;
 }
 
-html, body, iframe {
+html, iframe {
     margin: 0;
     padding: 0;
     border: none;
@@ -25,6 +25,8 @@ html, body, iframe {
 }
   
 body {
+    margin: 0;
+    min-height: 100dvh;
     display: flex;
     flex-direction: column;
 }
