--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro'
 ---
-<Layout title="">
+<Layout title="" inlineStyles="display: grid;">
   <iframe frameborder="0" src="https://Blog.RockGamerAK.com" style="background: white;"></iframe>
 </Layout>
