--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,7 +43,7 @@ if (!!classItems === false) classItems = ''
       </div>
     </main>
     <script src="/main.js" is:inline></script>
-    <script src="/eruda.js" is:inline></script>
+    <!-- <script src="/eruda.js" is:inline></script> -->
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
       var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
