--- a/src/styles/pages/videos.scss
+++ b/src/styles/pages/videos.scss
@@ -1,4 +1,6 @@
 section#videos {
+    --gap: 25px;
+
     display: flex;
     flex-wrap: wrap;
     padding: 25px;
@@ -10,6 +12,6 @@ section#videos > iframe {
     background-repeat: no-repeat;
     background-size: cover;
     align-items: center;
-    width: calc(calc(100%/3) - 25px);
-    height: calc(calc(calc(calc(100vw/3) - 25px)/16)*9)
+    width: calc(100%/3);
+    aspect-ratio: 16 / 9;
 }  
