--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -1,6 +1,6 @@
 .about-block {
     padding: 1rem;
-    font-size: 20px;
+    font-size: 1rem;
     font-weight: 7500;
     text-decoration: none
 }
