--- a/src/styles/pages/videos.scss
+++ b/src/styles/pages/videos.scss
@@ -8,7 +8,7 @@ section#videos {
 }
   
 section#videos > iframe {
-    background-image: center;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     align-items: center;
