remove sites from nav bar and make link broken

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -11,7 +11,7 @@ import '../styles/components/header.scss'
         <button onclick="goToUrl(this)" data-href="/contact">Contact</button>
         <button onclick="goToUrl(this)" data-href="/projects">Projects</button>
         <button onclick="goToUrl(this)" data-data-href="https://Blog.RockGamerAK.com" data-target="_blank">Blog</button>
-        <button onclick="goToUrl(this)" data-href="/sites">Sites</button>
+        <!-- <button onclick="goToUrl(this)" data-href="/sites">Sites</button> -->
         <button onclick="goToUrl(this)" data-href="/videos">Videos</button>
     </nav>
 </header>
