--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -1,53 +1,51 @@
-/* Styles for the Navigation Bar */
+// Styles for the Navigation Bar
 header {
-    display: flex;
-  /*  justify-content: center;  */
-    align-items: center;
-    padding: 2rem 4rem;
-    max-height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 2rem 4rem;
+
+  border-bottom: solid 1px gray;
+}
+
+header .logo-link {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  color: var(--logo-a-color);
+  text-decoration: none;
+}
+
+header .logo {
+  width: 80px;
+  height: auto;
+  border-radius: 100%;
+}
+
+header .logo:is(:hover, :focus) {
+  border-radius: 25%;
+}
+
+.nav {
+  flex: 1;
+
+  height: 100%;
+  
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+
+  flex-wrap: wrap;
+  gap: 15px;
+}
+
+.nav button {
+  // padding: 10px 20px;
+
+  border-radius: 100vw;
+
+  font-size: 1.25rem;
+  font-weight: 500;
   }
-  
-  header .logo-link {
-    height: 100%;
-    display: flex;
-    align-items: center;
-    color: var(--logo-a-color);
-    text-decoration: none;
-  }
-  
-  header .logo {
-    width: 80px;
-    height: auto;
-    border-radius: 100%;
-  }
-  
-  header .logo:focus {
-    border-radius: 100%;
-  }
-  
-  .nav {
-    flex: 1;
-  
-    height: 100%;
-    
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  
-    flex-wrap: wrap;
-    gap: 15px;
-  }
-  
-  .nav button {
-    // padding: 10px 20px;
-  
-    border-radius: 100vw;
-  
-    font-size: 1.25rem;
-    font-weight: 500;
-    }
-  
-  .nav .current-page {
-  }
-  
-  
+
+.nav .current-page {
+}
