--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro'
 ---
 <Layout title="404" pTitle="Not Found">
-  <font class="current-URL-not-found"></font>
+  <span class="current-URL-not-found"></span>
   <p></p>
   Error Type: 404
   <script src="/404.js" is:inline></script>
