--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -9,7 +9,7 @@ import Layout from '../layouts/Layout.astro'
   <hr width="550">
   <section class="list v">
     <div>
-      <a href="https://Timer.RockGamerAK.repl.co">My Timer Application</a><b>: </b>
+      <a href="https://Timer.RockGamerAK.com">My Timer Application</a><b>: </b>
       <span class="project-description">Punch in an hour minute and second value and see the timer whizz into action.</span>
     </div>
     <div>
@@ -36,17 +36,17 @@ import Layout from '../layouts/Layout.astro'
       <a href="https://Disability-Menus.RockGamerAK.com">My Disability Menus</a><b>: </b>
       <span class="project-description">An Oculus Environment That Is Suited For Disabled People!</span>
     </div>
-    <div>
+    <!-- <div>
       <a href="https://Browser.RockGamerAK.com">My Browser</a><b>: </b>
       <span class="project-description">A Hard-Coded "Browser" That Works!</span>
-    </div>
+    </div> -->
   </section>
   <hr width="750">
   <h3>Games</h3>
   <hr width="550">
   <section class="list v">
     <div>
-      <a href="https://uno.RockGamerAK.repl.co">My UNO Game</a><b>: </b>
+      <a href="https://uno.RockGamerAK..com">My UNO Game</a><b>: </b>
       <span class="project-description">Play UNO Online!</span>
     </div>
     <div>
