--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -4,7 +4,7 @@ header {
   align-items: center;
   padding: 2rem 4rem;
 
-  border-bottom: solid 1px gray;
+  border-bottom: solid 1px var(--background-secondary-color);
 }
 
 header .logo-link {
@@ -47,5 +47,5 @@ header .logo:is(:hover, :focus) {
   font-weight: 500;
   }
 
-.nav .current-page {
-}
+// .nav .current-page {
+// }
