--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -9,35 +9,35 @@ import Layout from '../layouts/Layout.astro'
   <hr width="550">
   <section class="list v">
     <div>
-      <a href="https://Timer.RockGamerAK.com">My Timer Application</a><b>: </b>
+      <a href="https://Timer.RockGamerAK.com">My Timer Application</a>: 
       <span class="project-description">Punch in an hour minute and second value and see the timer whizz into action.</span>
     </div>
     <div>
-      <a href="https://Live-Clock.RockGamerAK.com">My Clock Application</a><b>: </b>
+      <a href="https://Live-Clock.RockGamerAK.com">My Clock Application</a>: 
       <span class="project-description">This clock application harnesses the datetime features of JavaScript to display your local time no matter where you are.</span>
     </div>
     <div>
-      <a href="https://Nearpod.RockGamerAK.com">My Nearpod Joiner</a><b>: </b>
+      <a href="https://Nearpod.RockGamerAK.com">My Nearpod Joiner</a>: 
       <span class="project-description">Input in a code and it will join the presentation for you!</span>
     </div>
     <div>
-      <a href="https://Favicons.RockGamerAK.com">My Favicon Generator</a><b>: </b>
+      <a href="https://Favicons.RockGamerAK.com">My Favicon Generator</a>: 
       <span class="project-description">Input in a URL and it will generate the favicon of that URL!</span>
     </div>
     <!-- <div>
-      <a href="https://Image-Changer.RockGamerAK.com">My Image Changer</a><b>: </b>
+      <a href="https://Image-Changer.RockGamerAK.com">My Image Changer</a>: 
       <span class="project-description">A Random Image Changer!</span>
     </div> -->
     <!-- <div>
-      <a href="https://Pop-Ups.RockGamerAK.com">My Pop-Ups Machene</a><b>: </b>
+      <a href="https://Pop-Ups.RockGamerAK.com">My Pop-Ups Machene</a>: 
       <span class="project-description">My Version Of YouAreAnIdiot!</span>
     </div> -->
     <div>
-      <a href="https://Disability-Menus.RockGamerAK.com">My Disability Menus</a><b>: </b>
+      <a href="https://Disability-Menus.RockGamerAK.com">My Disability Menus</a>: 
       <span class="project-description">An Oculus Environment That Is Suited For Disabled People!</span>
     </div>
     <!-- <div>
-      <a href="https://Browser.RockGamerAK.com">My Browser</a><b>: </b>
+      <a href="https://Browser.RockGamerAK.com">My Browser</a>: 
       <span class="project-description">A Hard-Coded "Browser" That Works!</span>
     </div> -->
   </section>
@@ -46,23 +46,23 @@ import Layout from '../layouts/Layout.astro'
   <hr width="550">
   <section class="list v">
     <div>
-      <a href="https://uno.RockGamerAK..com">My UNO Game</a><b>: </b>
+      <a href="https://uno.RockGamerAK..com">My UNO Game</a>: 
       <span class="project-description">Play UNO Online!</span>
     </div>
     <div>
-      <a href="https://Tic-Tac-Toe.RockGamerAK.com">My Tic-Tac-Toe Game</a><b>: </b>
+      <a href="https://Tic-Tac-Toe.RockGamerAK.com">My Tic-Tac-Toe Game</a>: 
       <span class="project-description">Play Tic-Tac-Toe Online!</span>
     </div>
     <div>
-      <a href="https://Magic-8-Ball.RockGamerAK.com">My Magic-8-Ball Game</a><b>: </b>
+      <a href="https://Magic-8-Ball.RockGamerAK.com">My Magic-8-Ball Game</a>: 
       <span class="project-description">Play Tic-Tac-Toe Online!</span>
     </div>
     <div>
-      <a href="https://Rock-Paper-Scissors.RockGamerAK.com">My Rock-Paper-Scissors Game</a><b>: </b>
+      <a href="https://Rock-Paper-Scissors.RockGamerAK.com">My Rock-Paper-Scissors Game</a>: 
       <span class="project-description">Play Rock-Paper-Scissors Online!</span>
     </div>
     <div>
-      <a href="https://Cookie-Clicker.RockGamerAK.com">My Cookie Clicker Game</a><b>: </b>
+      <a href="https://Cookie-Clicker.RockGamerAK.com">My Cookie Clicker Game</a>: 
       <span class="project-description">Play Cookie Clicker Online!</span>
     </div>
   </section>
