--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -46,7 +46,7 @@ import Layout from '../layouts/Layout.astro'
   <hr width="550">
   <section class="list v">
     <div>
-      <a href="https://uno.RockGamerAK..com">My UNO Game</a>: 
+      <a href="https://uno.RockGamerAK.com">My UNO Game</a>: 
       <span class="project-description">Play UNO Online!</span>
     </div>
     <div>
