--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,7 +30,7 @@ if (!!classItems === false) classItems = ''
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{title}</title>
     <base href="https://AdarshRKumar.com" />
-    <link rel="icon" href="/RockGamerAK-Favicon.png">
+    <link rel="icon" href="/Favicon.png">
     <link href="https://firecss.hecker40.repl.co/fire.css" rel="stylesheet" type="text/css"/>
     <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=625cc7f8cb9e7d001955b4a3&product=sop' async='async'></script>
   </head>
