--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -5,5 +5,13 @@ import Layout from '../layouts/Layout.astro'
   <span class="current-URL-not-found"></span>
   <p></p>
   Error Type: 404
-  <script src="/404.js" is:inline></script>
+  <script is:inline>
+    let pageTitle = document.querySelector('.current-URL-not-found')
+    let aHTML = `<a href="${location.href}">${location.pathname}</a>`
+    if (location.pathname.startsWith('/404')) {
+      aHTML = `<a href="${location.href}">the requested page</a>`
+    }
+    pageTitle.innerHTML = `${aHTML} Could not be found`
+
+  </script>
 </Layout>
